made changes to new_simulator
deleted simulator.ipynb

created new QSimulator

--- a/new_simulator.ipynb
+++ b/new_simulator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +98,106 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cnot_matrix(control_qubit_index:int , target_qubit_index :int, num_qubits :int)->np.array:\n",
+    "        M = np.zeros((2 ** num_qubits, 2 ** num_qubits), dtype=np.complex128)\n",
+    "        for i in range(2 ** num_qubits):\n",
+    "            binary_i = format(i, f'0{num_qubits}b')\n",
+    "            binary_i_list = list(binary_i)\n",
+    "            if binary_i_list[-(target_qubit_index + 1)] == '1':\n",
+    "                binary_i_list[-(control_qubit_index + 1)] = str(1 - int(binary_i_list[-(control_qubit_index + 1)]))\n",
+    "            binary_j = ''.join(binary_i_list)\n",
+    "            j = int(binary_j, 2)\n",
+    "            M[i, j] = 1\n",
+    "            M[j, i] = 1\n",
+    "        return M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 1.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 1.+0.j]\n",
+      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cnot(0,1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnot(control,target,num_qubits):\n",
+    "    M = np.zeros((2 ** num_qubits, 2 ** num_qubits), dtype=np.complex128)\n",
+    "    for i in range(2 ** num_qubits):\n",
+    "        binary_i = format(i, f'0{num_qubits}b')\n",
+    "        binary_i_list = list(binary_i)\n",
+    "        if binary_i_list[-(target + 1)] == '1':\n",
+    "            binary_i_list[-(control + 1)] = str(1 - int(binary_i_list[-(control + 1)]))\n",
+    "        binary_j = ''.join(binary_i_list)\n",
+    "        j = int(binary_j, 2)\n",
+    "        M[i, j] = 1\n",
+    "        M[j, i] = 1\n",
+    "    return M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
+      " [0.+0.j 0.+0.j 0.+0.j 1.+0.j]\n",
+      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j]\n",
+      " [0.+0.j 1.+0.j 0.+0.j 0.+0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cnot(0,1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cnot(control, target, num_qubits):\n",
+    "    M = np.zeros((2 ** num_qubits, 2 ** num_qubits), dtype=np.complex128)\n",
+    "    for i in range(2 ** num_qubits):\n",
+    "        binary_i = format(i, f'0{num_qubits}b')[::-1]  # Reverse the binary representation\n",
+    "        binary_i_list = list(binary_i)\n",
+    "        if binary_i_list[control] == '1':\n",
+    "            binary_i_list[target] = str(1 - int(binary_i_list[target]))\n",
+    "        binary_j = ''.join(binary_i_list)[::-1]  # Reverse back the modified binary representation\n",
+    "        j = int(binary_j, 2)\n",
+    "        M[i, j] = 1\n",
+    "        M[j, i] = 1\n",
+    "    return M"
+   ]
   }
  ],
  "metadata": {
@@ -116,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
